docs: update documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,8 @@ export(tab_reactiveGraph_server)
 export(tab_reactiveGraph_ui)
 export(tab_reactiveObjects_server)
 export(tab_reactiveObjects_ui)
+export(tab_references_server)
+export(tab_references_ui)
 export(tab_sessionObject_server)
 export(tab_sessionObject_ui)
 export(tab_shinyModules_server)
