feat: rename some tabs, change order slightly and start structure of usingReactivity

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,8 +23,6 @@ export(tab_modCCx_server)
 export(tab_modCCx_ui)
 export(tab_optimisation_server)
 export(tab_optimisation_ui)
-export(tab_reactiveObjects_server)
-export(tab_reactiveObjects_ui)
 export(tab_references_server)
 export(tab_references_ui)
 export(tab_sessionObject_server)
@@ -39,6 +37,8 @@ export(tab_usingCSS_server)
 export(tab_usingCSS_ui)
 export(tab_usingJS_server)
 export(tab_usingJS_ui)
+export(tab_usingReactivity_server)
+export(tab_usingReactivity_ui)
 export(tab_visualisationPlotly_server)
 export(tab_visualisationPlotly_ui)
 export(tab_visualisationR2D3_server)
