docs: update documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(code_block)
 export(code_snippet)
 export(get_shinydashboard_theme)
 export(l)
+export(renderTreant)
 export(run_IAS_app)
 export(tab_appStructure_server)
 export(tab_appStructure_ui)
@@ -45,7 +46,10 @@ export(tab_visualisationR2D3_server)
 export(tab_visualisationR2D3_ui)
 export(tab_whatIsShiny_server)
 export(tab_whatIsShiny_ui)
+export(treant)
+export(treantOutput)
 import(htmltools)
+import(htmlwidgets)
 importFrom(shiny,column)
 importFrom(shiny,fluidRow)
 importFrom(shiny,icon)
