docs: updated documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(code_block)
 export(code_snippet)
 export(get_shinydashboard_theme)
 export(l)
+export(node)
 export(renderTreant)
 export(run_IAS_app)
 export(tab_appStructure_server)
